--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -146,48 +146,7 @@ ul li {
     overflow-x: scroll;
 }
 
-ul p {
+ul :link {
     text-decoration: none;
     color: inherit;
-}
-
-ul p:hover {
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.problem_details_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.problem_details_container .title{
-    justify-content: center;
-    align-items: center;
-}
-
-.problem_details_container .time-limit{
-    display: flex;
-    flex-direction: row;
-    gap : 10px;
-    align-items: center;
-}
-
-.problem_details_container .memory-limit{
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    align-items: center;
-}
-
-.problem_details_container ul li{
-    /* 
-    This needs to be fixed for some problems that have a lot of MathJax
-     */
-    display: flex;
-    width: 100%;
-    height: fit-content;
-    overflow-y: scroll;
-    overflow-x: hidden;
 }
