--- a/frontend/my-app/src/components/scrape_problem.css
+++ b/frontend/my-app/src/components/scrape_problem.css
@@ -1,21 +1,26 @@
 .problem_details_container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     background-color: #333;
     color: #fff;
     height: 100vh;
+    overflow: scroll;
+    padding-left: 20px;
 }
 
 .problem_details_container .title{
     justify-content: center;
     align-items: center;
+    display: flex;
+    flex-direction: row;
 }
 
 .problem_details_container .time-limit{
     display: flex;
     flex-direction: row;
     gap : 10px;
+    justify-content: center;
     align-items: center;
 }
 
@@ -24,6 +29,7 @@
     flex-direction: row;
     gap: 10px;
     align-items: center;
+    justify-content: center;
 }
 
 .problem_details_container ul li{
@@ -35,4 +41,40 @@
     height: fit-content;
     overflow-y: scroll;
     overflow-x: hidden;
+}
+
+.problem_input_specification{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+}
+
+.problem_output_specification{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: left;
+}
+
+.problem_sample_tests{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: left;
+}
+
+.problem_sample_test .title{
+    gap: 10px;
+    align-items: left;
+    justify-content: left;
+}
+
+.sample-test{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: left;
 }
