--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -4,7 +4,7 @@ main{
     /* justify-content: center; */
     align-items: center;
     gap: 20px;
-    background-color: #333;
+    background-color: rgb(30 41 59);
     color: #fff;
     height: 100vh;
     overflow-y: scroll;
@@ -50,7 +50,6 @@ main{
     gap: 100px;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #333;
     color: #fff;
     /* align-items: center; */
 }
@@ -129,6 +128,19 @@ main{
 .unsolved:hover{
     background-color: rgb(125, 124, 125);
     color: #fff;
+}
+
+.generate-questions-btn{
+    padding: 10px 20px;
+    background-color: inherit;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.generate-questions-btn:hover{
+    background-color: rgb(71 85 105);
 }
 
 ul {
