--- a/frontend/my-app/src/components/scrape-problem.css
+++ b/frontend/my-app/src/components/scrape-problem.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     /* align-items: center; */
-    background-color: #333;
+    background-color: rgb(30 41 59);
     color: #fff;
     height: 100vh;
     overflow: scroll;
